--- a/4_Formulas.ipynb
+++ b/4_Formulas.ipynb
@@ -95,6 +95,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Own weight"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$ G_1 = 0.5  \\gamma_c  B  Ht  d $$\n",
     "\n",
     "$$ M_1 = \\gamma_c  Ht  B  d  (B - 3  x_A + n  H_t) / 6 $$"
@@ -166,7 +173,205 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$ G_{6,1} = a^* - \\frac{2  a  \\sqrt{1 + n ^ 2}  H_t} { 3  B} $$\n",
+    "\n",
+    "$$ G_6 = -\\gamma_c  a ^ 2  G_{6,1} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ M_{6,1} = \\frac{n  (2 + n ^ 2)}{\\sqrt{1 + n ^ 2}} + \\frac{n_1  (2 - n ^ 2)}{ \\sqrt{1 + n_1 ^ 2}} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ M_{6,2} = n  n_1  a^* + (n + n_1)  b^* + \\frac{3  a  M_{6,1}}{8} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ M_{6,2,2} = b^* + \\frac{n  a}{2} + \\frac{2  a} { 3  \\sqrt{1 + n ^ 2}} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ M_{6,3} = a^*  M_{6,2,2} - 2  a  M_{6,2} / 3 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ M_6 = \\gamma_c  a ^ 2  M_{6,3} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hydro pressure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ W_{up,hrz} = 0.5  \\gamma_w  H_t ^ 2  D $$\n",
+    "$$ M_{up,hrz} = \\gamma_w  H_t ^ 3  D / 6 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ W_{up,vrt} = n  W_{up,hrz} $$\n",
+    "$$ M_{up,vrt} = -\\gamma_w  n  D  H_t ^ 2  (3  x_A - n  H_t) / 6 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ W_{low,hrz} = -0.5  \\gamma_w  H_2 ^ 2  D $$\n",
+    "$$ M_{low,hrz} = W_{low,hrz} * H_2 / 3 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ W_{low,vrt} = (n - \\frac{B  d}{H_t  D}) * W_{low,hrz} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ M_{low,vrt,1} = |x_A| - b - \\frac{a}{2} - \\frac{n  H_2}{3} $$\n",
+    "$$ M_{low,vrt,2} = x_B - m  H_2 $$\n",
+    "$$ M_{low,vrt,3} = 2  n  a  M_{low,vrt,1} + m  M_{low,vrt,2}  d $$\n",
+    "$$ M_{low,vrt} = \\frac{M_{low,vrt,3}  W_{low,vrt}}{D} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Anti-pressure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ U_1 = -\\gamma_w  H_2  [D  b + \\frac{a  (D + d) }{2} + (B - b - a) d] $$\n",
+    "$$ M_{U1} = 0 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ U_2 = -\\gamma_w (H_t - H_2)  (b + a)  D $$\n",
+    "$$ M_{U2} = -U_2  (|x_A| - \\frac{b + a}{2}) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Alluvium pressure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ W_{allu,hrz} = 0.5  \\gamma_{allu}  H_{allu} ^ 2  D $$\n",
+    "$$ M_{allu,hrz} = W_{allu,hrz}  H_{allu} / 3 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ W_{allu,vrt} = 0.5  \\gamma_{allu}  n  H_{allu} ^ 2  D $$\n",
+    "$$ M_{allu,vrt} = -W_{allu,vrt}(|x_A| - \\frac{n  H_{allu}}{3}) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Wave pressure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ W_{wave,hrz} = \\gamma_w  h_w  (\\frac{L_w}{\\pi}  + \\frac{h_w}{2}) \\frac{D}{2} $$\n",
+    "$$ M_{wave,hrz} = W_{wave,hrz}  (H_t - \\frac{L_w }{ 2  \\pi} + \\frac{3 h_w}{8}) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ W_{wave,vrt} = W_{wave,hrz}  n $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ice pressure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ W_{ice} = R_{ice} h_{ice} D $$\n",
+    "$$ M_{ice} = W_{ice} (H_t - 0.45 h_{ice} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Under construction\n",
+    "$$ N = G_1 + G_2 + G_3 + G_4 + G_5 + G_6 $$\n",
+    "$$ Q = 0 $$\n",
+    "$$ M = M_1 + M_2 + M_3 + M_4 + M_5 + M_6 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In use\n",
+    "$$ N = G_1 + G_2 + G_3 + G_4 + G_5 + G_6 + W_{up,vrt} + W_{low,vrt} + U_1 + U_2 + W_{wave,vrt} + W_{allu,vrt} $$\n",
+    "$$ Q = W_{up,hrz} + W_{low,hrz} + W_{allu,hrz} + W_{wave,hrz} $$\n",
+    "$$ M_{water} = M_{up,hrz} + M_{up,vrt} + M_{low,hrz} + M_{low,vrt} $$\n",
+    "$$ M = M_1 + M_2 + M_3 + M_4 + M_5 + M_6 + M_{water} + M_{U2} + M_{allu,hrz} + M_{allu,vrt} + M_{wave,hrz} $$"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -192,7 +397,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ sqrt1n = \\sqrt{1 + n ^ 2} $$"
+    "$$ sqrt1n = \\sqrt{1 + n ^ 2} $$\n",
+    "$$ sqrt1n_1 = \\sqrt{1 + n_1 ^ 2} $$"
    ]
   },
   {
