--- a/4_Formulas.ipynb
+++ b/4_Formulas.ipynb
@@ -376,6 +376,146 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Optimal \"B\" and \"n\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ [\\sigma_{z,A}]  B ^ 2 - N  B + 6  M = 0 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ f  N + c  B - k_3 * Q = 0 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stresses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sigma Z\n",
+    "$$ \\sigma_z = \\frac{N}{F} + \\frac{M}{J_y}x $$\n",
+    "$$ x \\in [x_A, x_B] $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\sigma_{z,A} = \\frac{N}{F} + \\frac{M}{J_y}x_A $$\n",
+    "$$ \\sigma_{z,B} = \\frac{N}{F} + \\frac{M}{J_y}x_B $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sigma X\n",
+    "$$ p_A = \\gamma_w  H_t + \\gamma_{allu}  H_{allu} $$\n",
+    "$$ p_B = \\gamma_w  H_2 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\sigma_{x,A} = (1 - n ^ 2)  p_A + n ^ 2  \\sigma_{z,A} $$\n",
+    "$$ \\sigma_{x,B} = (1 - m ^ 2)  p_B + m ^ 2  \\sigma_{z,B} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\sigma_x = \\frac{\\sigma_{x,A} (x_B - x) D + \\sigma_{x,B} (x - x_A) d}{B [d(x)]} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ [d(x)] =\n",
+    "\\begin{cases}\n",
+    "D, \\qquad \\qquad \\qquad \\qquad \\,x \\in [x_A; x_{C1}]\\\\\n",
+    "D - \\frac{D - d}{x_{C2} - x_{C1}} (x - x_{C1}), \\quad x \\in [x_{C1}; x_{C2}]\\\\\n",
+    "d, \\qquad \\qquad \\qquad \\qquad \\; x \\in [x_{C2}; x_B]\\\\\n",
+    "\\end{cases}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tau XZ\n",
+    "\n",
+    "$$ \\tau_{xz,A} = n (p_A - \\sigma_{z,A}) $$\n",
+    "\n",
+    "$$ \\tau_{xz,B} = -m (p_B - \\sigma_{z,B}) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\tau_{xz} = \\tilde{\\tau_{xz}} + \\Delta \\tau_{xz} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\tilde{\\tau_{xz}} = \\frac{\\tau_{xz,A} (x_B - x) D + \\tau_{xz,B} (x - x_A) d }{B [d(x)]} $$\n",
+    "\n",
+    "$$ x \\in [x_A, x_B] $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\Delta Q = Q - (\\tau_{xz,A} D + \\tau_{xz,B} d) B / 2 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\Delta \\tau (x) =\n",
+    "\\begin{cases}\n",
+    "0.5  (x_A ^ 2 - x ^ 2), \\qquad \\qquad \\qquad \\qquad \\quad \\: x \\in [x_A; x_{C1}]\\\\\n",
+    "\\frac{3D(x_{C2}-x_{C1})(x_A ^ 2 - x ^ 2)+(D-d)(2x+x_{C1})(x-x_{C1})^2}{6[D(x_{C2}-x_{C1})-(D-d)(x-x_{C1})]}, \\quad  x \\in [x_{C1}; x_{C2}]\\\\\n",
+    "\\frac{3D(x_A^2-x^2)+(D-d)(3x^2-x_{C1}^2-x_{C1}x_{C2}-x_{C2}^2)}{6 d}, \\quad \\quad \\: x \\in [x_{C2}; 0]\\\\\n",
+    "0.5  (x_B ^ 2 - x ^ 2), \\qquad \\qquad \\qquad \\qquad \\quad \\; x \\in [0; x_B]\\\\\n",
+    "\\end{cases}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -400,72 +540,6 @@
     "$$ sqrt1n = \\sqrt{1 + n ^ 2} $$\n",
     "$$ sqrt1n_1 = \\sqrt{1 + n_1 ^ 2} $$"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$     a = (D - d) / 2 $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$ F = B * d + a * (2 * b + a * \\sqrt{1 + n ^ 2}) $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$ \\sigma_z = \\frac{\\sum N}{F} \\mp \\frac{\\sum M_cm \\times x}{J_y} $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$  L_w = 11 * h_w $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$ \\sigma_{x,A} = (1 - n ^ 2) p_A + n ^ 2 \\sigma_{z,A} $$\n",
-    "\n",
-    "$$ \\sigma_{x,B} = (1 - m ^ 2) p_B + m ^ 2 \\sigma_{z,B} $$\n",
-    "\n",
-    "$$ \\sigma_x = \\frac{\\sigma_{x,A} (x_B - x) D + \\sigma_{x,B} (x - x_A) d}{B d(x)} $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$ d(x) =\n",
-    "\\begin{cases}\n",
-    "D, \\qquad \\qquad \\qquad \\qquad \\,x \\in [x_A; x_{C1}]\\\\\n",
-    "D - \\frac{D - d}{x_{C2} - x_{C1}} (x - x_{C1}), \\quad x \\in [x_{C1}; x_{C2}]\\\\\n",
-    "d, \\qquad \\qquad \\qquad \\qquad \\; x \\in [x_{C2}; x_B]\\\\\n",
-    "\\end{cases}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$ \\tau_{xz,A} = n (p_A - \\sigma_{z,A}) $$\n",
-    "\n",
-    "$$ \\tau_{xz,B} = -m (p_B - \\sigma_{z,B}) $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
