--- a/4_Formulas.ipynb
+++ b/4_Formulas.ipynb
@@ -506,17 +506,27 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$ \\Delta \\tau_{xz} = \\frac{\\Delta Q}{J_y} \\Delta \\tau (x) $$"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$ \\tau_{xz,lim} = f  (\\frac{\\sigma_{z,A}  x_B - \\sigma_{z,B}  x_A}{  B} + \\frac{\\sigma_{z,B} - \\sigma_{z,A} } {B} x) + c $$\n",
+    "\n",
+    "$$ x \\in [x_A, x_B] $$"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Sigma 1,2\n",
+    "\n",
+    "$$ \\sigma_{1,2} = \\frac{\\sigma_x + \\sigma_z \\pm \\sqrt{(\\sigma_x - \\sigma_z) ^ 2 + 4  \\tau_{xz} ^ 2}} {2} $$"
+   ]
   },
   {
    "cell_type": "markdown",
