--- a/Bach_work.tex
+++ b/Bach_work.tex
@@ -7,15 +7,87 @@
 
 \begin{document}
 
+
+\begin{titlepage}
+	\centering
+	{\scshape\LARGE Санкт-Петербургский политехнический универстиет \par}
+	\vspace{1cm}
+	{\scshape\Large (название кафедры)\par}
+	\vspace{1.5cm}
+	{\huge\bfseries Титульный лист\par}
+	\vspace{2cm}
+	{\Large\itshape Конструирование и статический расчет контрфорсной плотины с массивными оголовками\par}
+	\vfill
+	
+
+	\vfill
+
+% Bottom of the page
+	{\large Санкт-Петербург \par}
+	{\large 2020 г. \par}
+\end{titlepage}
+
 \tableofcontents
 
 \part{Введение}
 
+(Контент)
+
 \part{Классификация массивных бетонных плотин}
+
+(Контент)
 
 \part{Анализ существующих контрфорсных плотин}
 
+\section{Обзор данных о плотинах}
+
+\subsection{Дэниел-Джонсон, Канада}
+
+Река - Маникуаган
+Высота - 214 метров
+Длина - 1314 метров
+Объем бетона - 2.2 млн м3
+14 контрфорсов
+Толщина в самой тонкой точке - 22.5 метра
+Ширина гребня - 3 метра
+Верховая грань покрыта асфальтом
+Самая крупная арка - 160 метров
+Водохранилище кольцеобразной формы
+Площадь водохранилища - 1942 км2
+
+\subsection{Итайпу, Бразилия/Парагвай}
+
+Река - Парана
+Общая длина (включая каменно-набросную часть) - 7.2 км
+Высота плотины - 196 метров
+Площадь водохранилища -  1460 км2
+Объем бетона - 15,57 млн м3
+
+\subsection{Пенсакола, США}
+
+Высота - 46 метров
+Общая длина - 2 км
+Длина подпорного участка - 1.3 км
+Ширина арки - 18 метров
+Ширина контрфорса - 7.8 метра
+
+\subsection{Плотина Зейской ГЭС, Россия}
+
+Высота плотины - 115 метров
+Уклон верховой грани - 0.15
+Уклон низовой грани - 0.8
+Длина плотины - 714 метров
+Ширина контрфорса - 7 метров
+Ширина секции - 15 метров
+
+
+\section{Вывод}
+
+На основании проведенного обзора для дальнейших исследований выбрана контрфорсная плотина с массивным оголовком с размерами по высоте от 60 до 100 метров с шагом 10 метров, отношением ширины оголовка к ширине контрфорса 0.5 и для следующих характеристик грунта основания
+
 \part{Исходные данные для постановки исследований}
+
+(Контент)
 
 \part{Назначения параметров контрфорсной плотины n и B из условий требований устойчивости и прочности}
 
@@ -316,26 +388,85 @@ $$ C_{sustain} = f  N + c  B - k_3  Q $$
 
 \subsection{Функция построения графика зависимости\\ B от n}
 
+Цель функции - построить график зависимости ширины профиля плотины по основанию от уклона верховой грани при условии соблюдения критериев отсутствия растягивающих напряжений и устойчивости.
+
+По графику необходимо найти точку пересечения двух линий и записать соответствующие ей значения B и n.
+
+В будущих версиях программы предлагается находить решение численным методом из системы уравнений критериев прочности и устойчивости.
+
+Общий алгоритм работы функции:
+\begin{itemize}
+	\item Получить на входе данные о высоте треугольного профиля плотины, для которого выполняется расчет
+	\item Перебрать $B \times n$ комбинаций для каждой пары B и n
+	\item Для каждой пары найти те, при которых выполняются критерии прочности и устойчивости
+	\item Записать эти пары в массив
+	\item Вывести пары значений в виде графиков, отдельно для каждого критерия
+\end{itemize}
+
+Если все сделано правильно, график по критерию устойчивости - убывающий, по критерию отсутствия растягивающих напряжений - возрастающий.
+
+Точка пересечения этих графиков будет оптимальным решением, удовлетворяющим всем критериям.
+
 \subsection{Функция построения графика зависимости B и n от высоты профиля плотины}
+
+Цель данной функции - визуализировать, как найденные значения B и n соотносятся при разных высотах плотины.
+
+Функция содержит в себе полученные ранее оптимальные значения для разных высот в виде массивов. На основании этих данных строятся два графика - зависимости $B(H_t)$ и $n(H_t)$.
+
+Поскольку графики в данных зависимостях состоят только из трех точек, а на графике  $n(H_t)$ это особенно заметно, выполнено сглаживание последнего с помощью функции \textbf{make interp spline} из библиотеки \textbf{SciPy}.
 
 \part{Сопоставление касательных напряжений по подошве контрфорсной плотины с предельными значениями}
 
+\section{Метод рачета}
 
- Sigma Z
- $$ \sigma_z = \frac{N}{F} + \frac{M}{J_y}x $$
- $$ x \in [x_A, x_B] $$
+Используется библиотека \textbf{NumPy}, работающая массивами чисел.
 
- $$ \sigma_{z,A} = \frac{N}{F} + \frac{M}{J_y}x_A $$
- $$ \sigma_{z,B} = \frac{N}{F} + \frac{M}{J_y}x_B $$
+Создается массив с координатами $x \in [x_A, x_B]$.
+При подстановке массива в выражение, вычисления производятся для каждого элемента массива, на выходе, получается массив такого же размера.
 
- Sigma X
- $$ p_A = \gamma_w  H_t + \gamma_{allu}  H_{allu} $$
- $$ p_B = \gamma_w  H_2 $$
+Далее строится график с использованием библиотеки \textbf{Matplotlib}, где за ось х берется массив с координатами, за ось y - массив полученных значений.
 
- $$ \sigma_{x,A} = (1 - n ^ 2)  p_A + n ^ 2  \sigma_{z,A} $$
- $$ \sigma_{x,B} = (1 - m ^ 2)  p_B + m ^ 2  \sigma_{z,B} $$
 
- $$ \sigma_x = \frac{\sigma_{x,A} (x_B - x) D + \sigma_{x,B} (x - x_A) d}{B [d(x)]} $$
+\section{Нормальные напряжения $\sigma_z$}
+
+Нормальные напряжения $\sigma_z$ допускается определять по формуле внецентренного сжатия:
+
+$$ \sigma_z = \frac{N}{F} + \frac{M}{J_y}x $$
+$$ x \in [x_A, x_B] $$
+
+За начало координат принимается центр тяжести расчетного сечения, точки слева имеют знак минус, справа - плюс.
+
+Из формулы можно найти $\sigma_z$ в точках A, B:
+
+$$ \sigma_{z,A} = \frac{N}{F} + \frac{M}{J_y}x_A $$
+$$ \sigma_{z,B} = \frac{N}{F} + \frac{M}{J_y}x_B $$
+
+Найденные напряжения не могут быть отрицательными, в противном случае в бетоне возникнут зоны растяжения.
+
+Условие экономичности плотины - напряжение $\sigma_{z,A}$ близко к нулю.\newline
+
+По полученным значениям строится эпюра напряжений $\sigma_z$ для визуализации полученных данных и их проверки. Эпюра принимается линейной.
+
+\section{Нормальные напряжения, действующие\\ на ортогональных площадках $\sigma_x$}
+
+Для нахождения нормальных напряжений $\sigma_x$ потребуется сначала найти давление воды и наносов на грани плотины:
+
+$$ p_A = \gamma_w  H_t + \gamma_{allu}  H_{allu} $$
+$$ p_B = \gamma_w  H_2 $$
+
+Со стороны низовой грани действует только гидростатическое давление.
+
+Напряжения $\sigma_x$ определяются граничными условиями - в точках А и В:
+
+$$ \sigma_{x,A} = (1 - n ^ 2)  p_A + n ^ 2  \sigma_{z,A} $$
+$$ \sigma_{x,B} = (1 - m ^ 2)  p_B + m ^ 2  \sigma_{z,B} $$
+
+Эпюра строится на основе следующего выражения:
+
+$$ \sigma_x = \frac{\sigma_{x,A} (x_B - x) D + \sigma_{x,B} (x - x_A) d}{B [d(x)]} $$
+
+Для каждой точки на оси х находится напряжение $\sigma_x$, на основании полученного массива значений строится эпюра.
+Величина $[d(x)]$ зависит от текущей координаты х:
 
  $$ [d(x)] =
  \begin{cases}
@@ -344,40 +475,65 @@ $$ C_{sustain} = f  N + c  B - k_3  Q $$
  d, \qquad \qquad \qquad \qquad \; x \in [x_{C2}; x_B]\\
  \end{cases}
  $$
-
- Tau XZ
  
- $$ \tau_{xz,A} = n (p_A - \sigma_{z,A}) $$
+Следовательно эпюра $\sigma_x$ 2 раза меняет свой характер при движении от точки А к точке В.
+
+\section{Касательные напряжения $\tau_{xz}$}
+
+Касательные напряжения также определяются граничными условиями:
+
+$$ \tau_{xz,A} = n (p_A - \sigma_{z,A}) $$
  
- $$ \tau_{xz,B} = -m (p_B - \sigma_{z,B}) $$
+$$ \tau_{xz,B} = -m (p_B - \sigma_{z,B}) $$
 
- $$ \tau_{xz} = \tilde{\tau_{xz}} + \Delta \tau_{xz} $$
+Для уравновешивания силы Q и соблюдения граничных условий, выражение, описывающее $\tau_{xz}$ можно разбить на две составляющие:
 
- $$ \tilde{\tau_{xz}} = \frac{\tau_{xz,A} (x_B - x) D + \tau_{xz,B} (x - x_A) d }{B [d(x)]} $$
+$$ \tau_{xz} = \tilde{\tau_{xz}} + \Delta \tau_{xz} $$
+
+Составляющая $\tilde{\tau_{xz}}$ определяется аналогично $\sigma_x$:
+
+$$ \tilde{\tau_{xz}} = \frac{\tau_{xz,A} (x_B - x) D + \tau_{xz,B} (x - x_A) d }{B [d(x)]} $$
  
- $$ x \in [x_A, x_B] $$
+$$ x \in [x_A, x_B] $$
 
- $$ \Delta Q = Q - (\tau_{xz,A} D + \tau_{xz,B} d) B / 2 $$
+Составляющая $\Delta \tau_{xz}$ уравновешивает сдвигающую силу $\Delta Q$, которая определяется выражением:
 
- $$ \Delta \tau (x) =
+$$ \Delta Q = Q - (\tau_{xz,A} D + \tau_{xz,B} d) B / 2 $$
+
+Выражение для определения $\Delta \tau_{xz}$:
+
+$$ \Delta \tau_{xz} = \frac{\Delta Q}{J_y} \Delta \tau (x) $$
+
+Множитель $\Delta \tau (x)$ зависит от текущей координаты х:
+
+$$ \Delta \tau (x) =
  \begin{cases}
  0.5  (x_A ^ 2 - x ^ 2), \qquad \qquad \qquad \qquad \quad \: x \in [x_A; x_{C1}]\\
  \frac{3D(x_{C2}-x_{C1})(x_A ^ 2 - x ^ 2)+(D-d)(2x+x_{C1})(x-x_{C1})^2}{6[D(x_{C2}-x_{C1})-(D-d)(x-x_{C1})]}, \quad  x \in [x_{C1}; x_{C2}]\\
  \frac{3D(x_A^2-x^2)+(D-d)(3x^2-x_{C1}^2-x_{C1}x_{C2}-x_{C2}^2)}{6 d}, \quad \quad \: x \in [x_{C2}; 0]\\
  0.5  (x_B ^ 2 - x ^ 2), \qquad \qquad \qquad \qquad \quad \; x \in [0; x_B]\\
  \end{cases}
- $$
+$$
 
- $$ \Delta \tau_{xz} = \frac{\Delta Q}{J_y} \Delta \tau (x) $$
+Для устойчивости плотины также важно, чтобы полученные касательные напряжения $\tau_{xz}$ не превышали предельных значений в каждой точке:
 
- $$ \tau_{xz,lim} = f  (\frac{\sigma_{z,A}  x_B - \sigma_{z,B}  x_A}{  B} + \frac{\sigma_{z,B} - \sigma_{z,A} } {B} x) + c $$
+$$ \tau_{xz,lim} = f  (\frac{\sigma_{z,A}  x_B - \sigma_{z,B}  x_A}{  B} + \frac{\sigma_{z,B} - \sigma_{z,A} } {B} x) + c $$
  
- $$ x \in [x_A, x_B] $$
+$$ x \in [x_A, x_B] $$
 
- Sigma 1,2
+В случае превышения можно увеличить ширину плотины по основанию
+ B или ширину контрфорса d.
+
+\section{Главные нормальные напряжения $\sigma_{1,2}$}
+
+Главные нормальные напряжения $\sigma_{1,2}$ связаны с напряжениями $\sigma_z$, $\sigma_x$, $\tau_{xz}$ зависимостью:
  
 $$ \sigma_{1,2} = \frac{\sigma_x + \sigma_z \pm \sqrt{(\sigma_x - \sigma_z) ^ 2 + 4  \tau_{xz} ^ 2}} {2} $$
 
+Из этого выражения также строится эпюра главных нормальных напряжений $\sigma_{1,2}$.
+
 \part{Рекомендации по назначению параметров контрфорсной плотины для различных её высот}
+
+(контент)
 
 \end{document}
