--- a/Bach_work.tex
+++ b/Bach_work.tex
@@ -4,6 +4,7 @@
 \usepackage[T1,T2A]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[english,bulgarian,ukrainian,russian]{babel}
+\usepackage{graphicx}
 
 \begin{document}
 
@@ -42,6 +43,9 @@
 \section{Обзор данных о плотинах}
 
 \subsection{Дэниел-Джонсон, Канада}
+
+\includegraphics[width=6cm]{daniel-johnston1.png}
+\includegraphics[width=6cm]{daniel-johnston2.jpg}
 
 Река - Маникуаган
 Высота - 214 метров
