Explanation step-by-step

--- a/4_Formulas.ipynb
+++ b/4_Formulas.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Geometria"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Геометрические характеристики сечения.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$ x_A = (0.5 * B ^ 2  d + a  b ^ 2 + a ^ 2  (b + a  \\sqrt{1 + n ^ 2} / 3)  \\sqrt{1 + n ^ 2}) / F $$"
    ]
   },
@@ -391,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ f  N + c  B - k_3 * Q = 0 $$"
+    "$$ f  N + c  B - k_3  Q = 0 $$"
    ]
   },
   {
@@ -546,10 +560,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "$$ sqrt1n = \\sqrt{1 + n ^ 2} $$\n",
-    "$$ sqrt1n_1 = \\sqrt{1 + n_1 ^ 2} $$"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
